ffi/derive/tests/ui_fail/mutable_input_arg.stderr
error: Mutable references not supported
  --> tests/ui_fail/mutable_input_arg.rs:15:38
   |
15 |     pub fn from_mutable_input_arg(a: &mut u32) -> Self {
   |                                      ^^^^^^^^

error[E0425]: cannot find function, tuple struct or tuple variant `FfiStruct__from_mutable_input_arg` in this scope
  --> tests/ui_fail/mutable_input_arg.rs:25:25
   |
25 |     if FfiResult::Ok != FfiStruct__from_mutable_input_arg(s.as_mut_ptr()) {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
